prepare entropy simulation

--- a/BinEntropyConf/test_entropy.ipynb
+++ b/BinEntropyConf/test_entropy.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8b51e9cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\BinEntropyConf\\..\\simulation_engine\\algorithms\\apid.py:233: UserWarning: \n",
-      "The version_base parameter is not specified.\n",
-      "Please specify a compatability version level, or None.\n",
-      "Will assume defaults for version 1.1\n",
-      "  @hydra.main(config_name=f'config.yaml', config_path='./apid_src/config/')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "\n",
@@ -55,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "84490f06",
    "metadata": {},
    "outputs": [
@@ -1159,12 +1145,12 @@
     "results = {}\n",
     "\n",
     "for h in h_targets:\n",
-    "    data = BinaryEntropyConf.generate_data_rolling_ate(200, uniform_confounder_entropy=True, noise=False, h_target=h)\n",
+    "    data = BinaryEntropyConf.generate_data_rolling_ate(2, uniform_confounder_entropy=True, noise=False, h_target=h)\n",
     "    scenario = BinaryEntropyConf(data)\n",
     "    ATE_algs = ['ATE_tianpearl', 'ATE_entropybounds-trueTheta']\n",
     "    PNS_algs = ['PNS_tianpearl', 'PNS_entropybounds-trueTheta']\n",
     "    algs = ATE_algs + PNS_algs\n",
-    "    scenario.run(algs)\n",
+    "    scenario.run()\n",
     "    scenario.data\n",
     "    results[h] = scenario.data\n",
     "\n",
