--- a/BinEntropyConf/test_entropy.ipynb
+++ b/BinEntropyConf/test_entropy.ipynb
@@ -6107,6 +6107,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c866922",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'to_pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mresults\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_pickle\u001b[49m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults_array_delete.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'to_pickle'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.to_pickle(results, f'results_array_delete.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "51a9dd97",
    "metadata": {},
    "outputs": [
